[package]
name = "homeapi"
version = "0.1.0"
authors = ["INAJIMA Daisuke <inajima@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-graphql = "2.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
lambda_runtime = "0.3"
once_cell = "1.8"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusoto_core = { version = "0.46", default-features = false, features = ["rustls"]}
rusoto_dynamodb = { version = "0.46", default-features = false, features = ["rustls"]}
rust_decimal = { version = "1.0", features = ["serde-float"] }
rust_decimal_macros = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_dynamodb = "0.8"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
