[package]
name = "homeapi"
version = "0.1.0"
authors = ["INAJIMA Daisuke <inajima@gmail.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0"
async-graphql = { version = "3.0", features = ["chrono", "decimal"] }
async-graphql-warp = "3.0"
base64 = "0.13.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.8"
futures = "0.3"
http = "0.2"
lambda_runtime = "0.14"
once_cell = "1.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusoto_core = { version = "0.47", default-features = false, features = ["rustls"]}
rusoto_dynamodb = { version = "0.47", default-features = false, features = ["rustls"]}
rust_decimal = { version = "1.0", features = ["serde-float"] }
rust_decimal_macros = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_dynamodb = "0.9"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
