[package]
name = "homeapi"
version = "0.1.0"
authors = ["INAJIMA Daisuke <inajima@gmail.com>"]
edition = "2024"

[dependencies]
anyhow = "1.0"
async-graphql = { version = "7.0", features = ["chrono", "decimal"] }
async-graphql-axum = "7.0"
axum = "0.8"
base64 = "0.22"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
lambda_runtime = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
aws-config = { version = "1.5", default-features = false, features = ["rt-tokio", "rustls"] }
aws-sdk-dynamodb = { version = "1.61", default-features = false, features = ["rt-tokio", "rustls"] }
rust_decimal = { version = "1.0", features = ["serde-float"] }
rust_decimal_macros = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_dynamo = { version = "4.2", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
jsonwebtoken = "9.3"
sha2 = "0.10"
uuid = { version = "1.11", features = ["v4"] }
